@@ -13,6 +13,7 @@ Version 1.1.2 to be released
 - Enh #946: Added a new parameter to CBaseController::widget() method to allow capturing the output of the widget (Qiang)
 - Enh #1009: Allow quoted columns in CDbCriteria::select when performing relational query (Qiang)
 - Enh: CCaptchaAction now supports unlimited tests by setting its testLimit to be 0 (Qiang)
+- New #1005: added CWinCache (Sam Dark)
 
 Version 1.1.1 March 14, 2010
 ----------------------------
